--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                 <h1><span>tudo</span> em um único <span>lugar</span></h1>
                 <h3>Faça seu pedido agora!</h3>
                 <p>Os melhores produtos do campo direto do produtor</p>
-                <h5><a href="#">Saiba Mais</a></h5>
+                <h5><a href="./sobre.htmls">Saiba Mais</a></h5>
             </div>
             <div class="imagemDestaque">
                 <img src="./img/FazendeiroPNG.png" alt="Fazendeiro com frutas">
